engine/kubernetes/engine.pod.yml
apiVersion: v1
kind: Pod
metadata:
  # This name uniquely identifies the pod
  name: engine-pod
  labels:
    app: engine
spec:
  containers:
  - name: engine
    image: csia-pme/engine
    # As we use the local image, there is no need to pull the image
    imagePullPolicy: Never
    ports:
    - name: http
      containerPort: 80
