engine/kubernetes/engine.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: engine-stateful
  labels:
    app: engine
spec:
  serviceName: engine
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
      - name: engine
        image: ghcr.io/csia-pme/csia-pme-engine:latest
        # If you use the local image, uncomment the next line - there is no need to pull the image
        # imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 80
