engine/kubernetes/minio.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the pod
  name: minio-stateful
  labels:
    app: minio
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-pv-claim
      containers:
      - name: minio
        # Pulls the MinIO image from Docker Hub
        image: minio/minio:RELEASE.2022-08-13T21-54-44Z
        args:
        - server
        - --address
        - ":9000"
        - --console-address
        - ":9001"
        - /storage
        ports:
        - name: api
          containerPort: 9000
        - name: console
          containerPort: 9001
        volumeMounts:
        - name: storage
          mountPath: "/storage"
