engine/kubernetes/engine.service.yml
apiVersion: v1
kind: Service
metadata:
  name: engine-service
  labels:
    app: engine
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: engine
