engine/kubernetes/mongo.service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongo
