engine/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-engine
spec:
  selector:
    app: engine
  ports:
  - protocol: TCP
    port: 80
